Bug fix: Goodreads shelf alignment
Fixed width and height for the books and changed display as I didn't want them looking like a list.

--- a/src/style.css
+++ b/src/style.css
@@ -896,10 +896,9 @@ button:focus {
 } */
 
 .gr_grid_book_container {
-  /* customize book cover container div here */
-  float: left;
-width: 39px;
-height: 60px;
-padding: 0px 0px;
-overflow: hidden;
+  height: 5em;
+  overflow: hidden;
+  padding: 0;
+  width: 4em;
+  display: inline-block;
 }
